Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -68,7 +68,8 @@ src="https://www.facebook.com/tr?id=1356957792233984&ev=PageView&noscript=1"
     <div class="about-app">
       <h3>About this app</h3>
       <p>
-        Enjoy Teen Patti Master, the ultimate casual game for playing Rummy, Poker, Andar Bahar and many more classic games! Whether you're at home or on the move, dive into exciting gameplay with friends and family. Get ₹1175 bonus on signup!
+       Fair play games Enjoy Teen Patti Master, the ultimate casual game for playing Rummy, Poker, Andar Bahar and many more classic games! Whether you're at home or on the move, dive into exciting gameplay with friends and family.
+
       </p>
       <p><strong>Updated on:</strong> June 04, 2025</p>
     </div>
