Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -86,13 +86,13 @@ src="https://www.facebook.com/tr?id=1356957792233984&ev=PageView&noscript=1"
 
   <div class="review">
     <p class="username">💬 Ramesh Patel</p>
-    <p class="comment">Bahot mast game hai! ₹500 bonus sach me mila 🔥🔥</p>
+    <p class="comment">Bahot mast game hai! bonus sach me mila 🔥🔥</p>
     <p class="rating">⭐⭐⭐⭐⭐</p>
   </div>
 
   <div class="review">
     <p class="username">💬 Priya Mehta</p>
-    <p class="comment">Daily earning ho rahi hai, withdraw bhi easy hai 😍</p>
+    <p class="comment">Ap log bhi is game ka anand lo 😍</p>
     <p class="rating">⭐⭐⭐⭐⭐</p>
   </div>
 
