--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -61,7 +61,7 @@ src="https://www.facebook.com/tr?id=1356957792233984&ev=PageView&noscript=1"
     <!-- ✅ BUTTON HERE (immediately after app-info) -->
 <div class="full-width-btn">
   <a href="https://www.earntp.com/m/qnb18o" class="download-btn">
-    <span>Download Now (₹500 Bonus)</span>
+    <span>Download Now (Get bonus today)</span>
   </a>
 </div>
 
