Update spin crush pixel.html

--- a/spin crush pixel.html
+++ b/spin crush pixel.html
@@ -60,7 +60,7 @@ src="https://www.facebook.com/tr?id=24758660847067489&ev=PageView&noscript=1"
   </div>
     <!-- ✅ BUTTON HERE (immediately after app-info) -->
 <div class="full-width-btn">
-  <a href="https://2shisgjsqawwhsagui7c.Safelyearnmillionsbysharingonepersonaqfxzqyfw.com?code=ADE7X99JX92&t=1749346514" class="download-btn">
+  <a href="https://2shisgjsqawwhsagui7c.Safelyearnmillionsbysharingonepersonaqfxzqyfw.com?code=ADE7X99JX92&t=1749346514" onclick="fbq('track', 'Download');" class="download-btn">
     <span>Download Now (Get bonus today)</span>
   </a>
 </div>
