Update teen patti master pixel.html

--- a/teen patti master pixel.html
+++ b/teen patti master pixel.html
@@ -79,7 +79,7 @@ src="https://www.facebook.com/tr?id=1714601889157622&ev=PageView&noscript=1"
   </div>
     <!-- ✅ BUTTON HERE (immediately after app-info) -->
 <div class="full-width-btn">
-  <a href="https://www.earntp.com/m/qnb18o" class="download-btn" onclick="fbq('track', 'Download');">
+  <a href="https://www.earntp.com/m/l34ii" class="download-btn" onclick="fbq('track', 'Download');">
     <span>Download Now (Get bonus today)</span>
   </a>
 </div>
