--- a/spin crush pixel.html
+++ b/spin crush pixel.html
@@ -4,29 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Download spin crush and Enjoy classic games like Andar Bahar, Rummy, Poker and more.">
-  <meta name="keywords" content="spin crush,spin crush Download, Rummy, Poker, Casino, Game Download, Bonus,fun play fun games">
-  <meta name="author" content="Spin Crush Official">
-  <title>Spin Crush - Apps on Play Store</title>
+  <meta name="description" content="Download Ind Club and Enjoy classic games like Andar Bahar, Rummy, Poker and more.">
+  <meta name="keywords" content="ind club,ind club Download, Rummy, Poker, Casino, Game Download, Bonus,fun play fun games">
+  <meta name="author" content="Ind Club Official">
+  <title>Ind Club- Apps on Play Store</title>
   <link rel="stylesheet" href="styles.css" />
   
-<!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '24758660847067489');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=24758660847067489&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+
   
 <body>
   <div class="container">
@@ -36,9 +20,9 @@ src="https://www.facebook.com/tr?id=24758660847067489&ev=PageView&noscript=1"
     </div>
 
     <div class="app-info">
-      <img src="spin_crush.jpg" alt="App Icon" class="app-icon" >
+      <img src="ind_club.jpg" alt="App Icon" class="app-icon" >
       <div class="app-meta">
-        <h2>Spin Crush <br><span class="developer"Spin Crush Official</span></h2>
+        <h2>Ind Club <br><span class="developer"Spin Crush Official</span></h2>
         
   </div>
     </div>
@@ -62,7 +46,7 @@ src="https://www.facebook.com/tr?id=24758660847067489&ev=PageView&noscript=1"
 <div class="full-width-btn">
   
   <a 
-  href="https://2shisgjsqawwhsagui7c.Safelyearnmillionsbysharingonepersonaqfxzqyfw.com?code=ADE7X99JX92&t=1749346514" 
+  href="https://indclubagent6.com?code=34UC4D1HUD8&t=1751380326" 
   onclick="fbq('track', 'Download');" 
   class="download-btn">
   <span>Download Now (Get bonus today)</span>
@@ -72,7 +56,7 @@ src="https://www.facebook.com/tr?id=24758660847067489&ev=PageView&noscript=1"
     <div class="about-app">
       <h3>About this app</h3>
       <p>
-       Fair play games Enjoy Spin crush, the ultimate casual game for playing Rummy, Poker, Andar Bahar and many more classic games! Whether you're at home or on the move, dive into exciting gameplay with friends and family.
+       Fair play games Enjoy Ind Club, the ultimate casual game for playing Rummy, Poker, Andar Bahar and many more classic games! Whether you're at home or on the move, dive into exciting gameplay with friends and family.
 
       </p>
       <p><strong>Updated on:</strong> June 04, 2025</p>
