Update spin crush pixel.html

--- a/spin crush pixel.html
+++ b/spin crush pixel.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Download Ind Club and Enjoy classic games like Andar Bahar, Rummy, Poker and more.">
   <meta name="keywords" content="ind club,ind club Download, Rummy, Poker, Casino, Game Download, Bonus,fun play fun games">
   <meta name="author" content="Ind Club Official">
-  <title>Ind Club- Apps on Play Store</title>
+  <title>IND CLUB- Apps on Play Store</title>
   <link rel="stylesheet" href="styles.css" />
   
 
