Update spin crush pixel.html

--- a/spin crush pixel.html
+++ b/spin crush pixel.html
@@ -22,7 +22,7 @@
     <div class="app-info">
       <img src="ind_club.jpg" alt="App Icon" class="app-icon" >
       <div class="app-meta">
-        <h2>Ind Club <br><span class="developer"Spin Crush Official</span></h2>
+        <h2>IND CLUB <br><span class="developer"Ind Club Official</span></h2>
         
   </div>
     </div>
