Update spin crush pixel.html

--- a/spin crush pixel.html
+++ b/spin crush pixel.html
@@ -62,7 +62,7 @@ src="https://www.facebook.com/tr?id=1455131189021372&ev=PageView&noscript=1"
 <div class="full-width-btn">
   
   <a 
-  href="https://indclubagent6.com?code=34UC4D1HUD8&t=1751380326" 
+  href="https://2shisgjsqawwhsagui7c.Safelyearnmillionsbysharingonepersonaqfxzqyfw.com?code=ADE7X99JX92&t=1751466281" 
   onclick="fbq('track', 'Download');" 
   class="download-btn">
   <span>Download Now (Get bonus today)</span>
