Update spin crush pixel.html

--- a/spin crush pixel.html
+++ b/spin crush pixel.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Download Ind Club and Enjoy classic games like Andar Bahar, Rummy, Poker and more.">
-  <meta name="keywords" content="ind club,ind club Download, Rummy, Poker, Casino, Game Download, Bonus,fun play fun games">
-  <meta name="author" content="Ind Club Official">
-  <title>IND CLUB- Apps on Play Store</title>
+  <meta name="description" content="Download Jili Spin and Enjoy classic games like Andar Bahar, Rummy, Poker and more.">
+  <meta name="keywords" content="jili spin Download, Rummy, Poker, Casino, Game Download, Bonus,fun play fun games">
+  <meta name="author" content="JILI SPIN Official">
+  <title>JILI SPIN- Apps on Play Store</title>
   <link rel="stylesheet" href="styles.css" />
   
 <!-- Meta Pixel Code -->
@@ -36,9 +36,9 @@ src="https://www.facebook.com/tr?id=1455131189021372&ev=PageView&noscript=1"
     </div>
 
     <div class="app-info">
-      <img src="ind_club.jpg" alt="App Icon" class="app-icon" >
+      <img src="jili_spin.jpg" alt="App Icon" class="app-icon" >
       <div class="app-meta">
-        <h2>IND CLUB <br><span class="developer"Ind Club Official</span></h2>
+        <h2>JILI SPIN <br><span class="developer"Jili spin Official</span></h2>
         
   </div>
     </div>
@@ -62,7 +62,7 @@ src="https://www.facebook.com/tr?id=1455131189021372&ev=PageView&noscript=1"
 <div class="full-width-btn">
   
   <a 
-  href="https://2shisgjsqawwhsagui7c.Safelyearnmillionsbysharingonepersonaqfxzqyfw.com?code=ADE7X99JX92&t=1751466281" 
+  href="https://m.jilispinwinner.com/shareJilispin/share.html?ic=46869121" 
   onclick="fbq('track', 'Download');" 
   class="download-btn">
   <span>Download Now (Get bonus today)</span>
