Update spin crush pixel.html

--- a/spin crush pixel.html
+++ b/spin crush pixel.html
@@ -72,7 +72,7 @@ src="https://www.facebook.com/tr?id=1455131189021372&ev=PageView&noscript=1"
     <div class="about-app">
       <h3>About this app</h3>
       <p>
-       Fair play games Enjoy Ind Club, the ultimate casual game for playing Rummy, Poker, Andar Bahar and many more classic games! Whether you're at home or on the move, dive into exciting gameplay with friends and family.
+       Fair play games Enjoy Jili Spin, the ultimate casual game for playing Rummy, Poker, Andar Bahar and many more classic games! Whether you're at home or on the move, dive into exciting gameplay with friends and family.
 
       </p>
       <p><strong>Updated on:</strong> June 04, 2025</p>
