--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Meta Tags -->
-    <title>D1 Game - Play Fun Games Online | Free Mobile Entertainment</title>
-    <meta name="description" content="D1 Game offers exciting mobile games for entertainment. Play fun games online for free. Download now and enjoy amazing gaming experience.">
-    <meta name="keywords" content="d1 game, mobile games, fun games, online games, free games, entertainment games, puzzle games, arcade games">
-    <meta name="author" content="D1 Game Entertainment">
+    <title>D1 Game - Play Fun Games Online |  Mobile Entertainment game</title>
+    <meta name="description" content="D1 Game offers exciting slot games for entertainment. Play fun games online. Download now and enjoy amazing gaming experience.download d1 game now.">
+    <meta name="keywords" content="d1 game, d1 games, d1 game,d1 apk, d1 free, d1 download , d1game apk,d1">
+    <meta name="author" content="D1 Game">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
